--- a/app.css
+++ b/app.css
@@ -1,8 +1,8 @@
-html, body {
+/* html, body {
     margin:0 !important;
-    padding: 0 !important;
-    box-sizing: border-box !important;
-}
+    padding: 0 !important; 
+    box-sizing: border-box !important; 
+} */
 
 .container-fluid{
     padding-right: 15px;
